--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,1 +1,54 @@
-// import { css } from 'styled-components';
+@import 'style/responsive', 'style/colors';
+
+
+#home-title-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1.home-title {
+    // margin-top: 30vh;
+    position: relative;
+    @include responsive-static(font-size, 40, 200);
+    text-shadow: 2px 2px 2px black;
+    
+    // background-color: $clr-primary;
+
+    &::before {
+        pointer-events: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url('../../images/masks/mask-paint-splatter.png');
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-attachment: fixed;
+        text-shadow: none;
+    }
+}
+
+#home-title-first {
+    background-position: 20px 20px;
+    
+    &::before {
+        content: 'TYLER';
+    }
+}
+
+#home-title-last {
+    background-position: 40px -10px;
+
+    &::before {
+        content: 'SMITH';
+    }
+}
+
+.mask-splatter {
+    // mask-image: url('../../images/masks/mask-paint-splatter.png');
+    z-index: -1;
+    position: absolute;
+}
