--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,24 +1,15 @@
 @import 'style/colors', 'style/breakpoints', 'style/responsive', 'style/fonts';
 
-$sidebarWidth: 18vw;
+$navbarWidth: 18vw;
 
 ///
-// MAIN / SIDEBAR positioning
+// MAIN / NAVBAR positioning
 ///
 main {
-    position: fixed;
-    height: 100%;
-    // width: calc(100vw - #{$sidebarWidth});
-    width: 100%;
-    padding-left: $sidebarWidth;
-
-    // background-color: $clr-primary-dark;
-    // background-color: #000000;
-    // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%2366fcf1' stroke-width='10' stroke-opacity='0.16'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
-}
-
-nav {
-    width: $sidebarWidth;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    // position: fixed;
 }
 
 // This moves the navbar to the top on mobile
