feat: added basic responsive navbar separator

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -20,13 +20,41 @@ nav {
 
 }
 
+.navbar-group {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    width: 300px;
+}
+
+.nav-divider-wrapper {
+    @include responsive-static(height, 22, 60);
+    width: 10px;
+    border: 1px dotted green;
+    display: flex;
+    align-items: center;
+
+    .nav-divider {
+        // content: '';
+        width: 100%;
+        padding-top: 100%;
+        border-radius: 100%;
+        background-color: red;
+    }
+    // border-left: 2px solid black;
+    // box-sizing: content-box;
+    // padding: 10% 0%;
+    // height: 10px;
+}
+
 .link {
         @include font-fancy;
 }
 
 .link-h1 {
     @include responsive-static(font-size, 15, 40);
-    padding-top: 10%;
+    // padding-top: 10%;
     padding-left: $padding-h1;
 }
 
