--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -9,6 +9,7 @@ main {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     // position: fixed;
 }
 
