--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,6 +24,7 @@ h1.home-title {
         width: 100%;
         height: 100%;
         background: url('../../images/masks/mask-paint-splatter.png');
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-attachment: fixed;
