--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,6 +2,7 @@
 
 
 #home-title-container {
+
     order: -1;
     justify-self: center;
     height: 100%;
@@ -13,39 +14,54 @@
     margin: 0% 0% 25px 0%;
 }
 
+// 
+// ANCHOR "Tyler Smith" title!!
+// 
 h1.home-title {
-    @include responsive(font-size, 40, 150, 320, 1450);
-    position: relative;
-    text-shadow: 2px 2px 2px black;
+    @include responsive(font-size, 40, 200, 320, 1450);
+    // position: relative;
+    // text-shadow: 2px 2px 2px black;
+    // background: url('../../images/masks/mask-paint-splatter.png');
+    // background-clip: text;
+    background-attachment: fixed;
+    background-size: 500%;
+    // background-color: black;
+    // -webkit-text-fill-color: transparent;
+    // -webkit-background-clip: text;
 
-    &::before {
-        pointer-events: none;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: url('../../images/masks/mask-paint-splatter.png');
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-attachment: fixed;
+    // &:before {
+    //     pointer-events: none;
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     -webkit-background-clip: text;
+    // }
+
+    .home-title__fx {
+        // -webkit-text-fill-color: transparent;
+        color: red;
+        // background-color: blue;
         text-shadow: none;
+        // position: absolute;
+        // top: 0;
+        // left: 0;
+        // height: 100%;
+        // width: 100%;
     }
 }
 
 #home-title-first {
-    background-position: 20px 20px;
-    
-    &::before {
-        content: 'TYLER';
+    .home-title__fx {
+        content: 'abcdefg';
     }
 }
 
 #home-title-last {
     background-position: 40px -10px;
 
-    &::before {
-        content: 'SMITH';
-    }
+    // &::before {
+        // content: 'SMITH';
+    // }
 }
 
 .mask-splatter {
