--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,55 +17,15 @@
 // 
 // ANCHOR "Tyler Smith" title!!
 // 
-h1.home-title {
+.home-title {
     @include responsive(font-size, 40, 200, 320, 1450);
-    // position: relative;
     // text-shadow: 2px 2px 2px black;
-    // background: url('../../images/masks/mask-paint-splatter.png');
-    // background-clip: text;
-    background-attachment: fixed;
-    background-size: 500%;
-    // background-color: black;
-    // -webkit-text-fill-color: transparent;
-    // -webkit-background-clip: text;
 
-    // &:before {
-    //     pointer-events: none;
-    //     position: absolute;
-    //     width: 100%;
-    //     height: 100%;
-    //     -webkit-background-clip: text;
-    // }
-
-    .home-title__fx {
-        // -webkit-text-fill-color: transparent;
-        color: red;
-        // background-color: blue;
-        text-shadow: none;
-        // position: absolute;
-        // top: 0;
-        // left: 0;
-        // height: 100%;
-        // width: 100%;
-    }
 }
 
-#home-title-first {
-    .home-title__fx {
-        content: 'abcdefg';
-    }
-}
-
-#home-title-last {
-    background-position: 40px -10px;
-
-    // &::before {
-        // content: 'SMITH';
-    // }
-}
-
-.mask-splatter {
-    // mask-image: url('../../images/masks/mask-paint-splatter.png');
-    z-index: -1;
-    position: absolute;
+.fxtext__text {
+    text-shadow: 
+        black 0px 5px 10px,
+        black 5px 0px 10px,
+        black -5px 0px 10px;
 }
