feat: multiple layers scaling and working correctly on fxtext.

--- a/src/components/FXText/FXText.scss
+++ b/src/components/FXText/FXText.scss
@@ -24,7 +24,7 @@
         background-position-y: 50%;
         background-repeat: repeat;
         background-attachment: local;
-        background-size: 100%;
+        background-size: 1000px;
 
         // filter:drop-shadow(50%);
         filter: invert(80%);
