--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -9,16 +9,17 @@ $padding-h2: 4%;
 // 
 
 nav {
+    // ANCHOR ALL variants
     display: flex;
     position: relative;
     left: 0;
-
-    // DESKTOP NAVBAR
-    flex-direction: row;
     justify-content: center;
+    flex-direction: row;
+    background-color: $clr-primary-light;
 
-    // MOBILE NAVBAR
-    
+    &.variant-home {
+        background-color: unset;
+    }
 }
 
 .navbar-group {
@@ -26,8 +27,12 @@ nav {
     flex-direction: column;
     text-align: center;
     text-transform: uppercase;
-
     width: 300px;
+
+    // Example use of accessing parent variant
+    .variant-home & {
+        // background-color: red;
+    }
 }   
 
 // Navbar Separator, aka divider
