--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -3,19 +3,37 @@
 $navbarWidth: 18vw;
 
 ///
-// MAIN / NAVBAR positioning
+// Container / NAVBAR positioning
 ///
 main {
-    min-height: 100vh;
+    position: relative;
+    background-color: $clr-primary-dark;
+    
+    
+}
+
+.container {
+    z-index: 20;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // position: fixed;
+    position: relative;
+    min-height: 100vh;
+    height: 100%;
+    padding-top: 120px;
+
+    /* Style */
+    box-shadow: black 0px 0px 700px;
+    background-color: white;
+    /* Style-Border */
+    border: 4px solid black;
+    border-top: 0px;
+    border-bottom: 0px;
 }
 
 // This moves the navbar to the top on mobile
 @media only screen and ($bp-mobile) {
-    main {
+    .container {
         padding-left: 0;
     }
     nav {
