feat: removed nav children on variants that are not home

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -10,12 +10,13 @@ $padding-h2: 4%;
 
 nav {
     // ANCHOR ALL variants
+    z-index: 50;
     display: flex;
     position: relative;
     left: 0;
     justify-content: center;
     flex-direction: row;
-    background-color: $clr-primary-light;
+    background-color: $clr-primary-light;   
 
     &.variant-home {
         background-color: unset;
