--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -8,8 +8,7 @@ $navbarWidth: 18vw;
 main {
     position: relative;
     background-color: $clr-primary-dark;
-    
-    
+    // height: 100%;
 }
 
 .container {
