feat: temporary under construction landing page!

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -19,7 +19,8 @@ main {
     position: relative;
     min-height: 100vh;
     height: 100%;
-    padding-top: 120px;
+    padding: 0;
+    // padding-top: 120px;
 
     /* Style */
     box-shadow: black 0px 0px 700px;
