--- a/src/components/app/mainfx.scss
+++ b/src/components/app/mainfx.scss
@@ -32,8 +32,9 @@
 
 #main-fx-2 {
     z-index: 1;
-    filter: blur(5px);
+    opacity: 0.3;
+    filter: blur(3px);
     background: url('../../images/masks/paint-splatter-tiled.png');
     // background: url('../../images/svg/splatter.svg');
-    background-size: 100%;
+    // background-size: 100%;
 }
