--- a/src/components/projectwrapper/projectwrapper.scss
+++ b/src/components/projectwrapper/projectwrapper.scss
@@ -1,5 +1,9 @@
 #project-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
+
+    width: 80%;
+    margin: auto;
 }
