--- a/src/style/fonts/_fonts.scss
+++ b/src/style/fonts/_fonts.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
 
 @mixin font-display () {
     font-family: 'Staatliches', sans-serif;
@@ -17,4 +18,8 @@
 
 @mixin font-lora () {
     font-family: 'Lora', serif;
+}
+
+@mixin font-fancier () {
+    font-family: 'Italianno', serif;
 }
