--- a/src/components/app/MainFX/MainFX.scss
+++ b/src/components/app/MainFX/MainFX.scss
@@ -33,7 +33,7 @@
 #main-fx-2 {
     z-index: 1;
     filter: blur(5px);
-    background: url('../../images/masks/paint-splatter-tiled.png');
+    background: url('../../../images/masks/paint-splatter-tiled.png');
     // background: url('../../images/svg/splatter.svg');
     background-size: 100%;
 }
