feat: some more rework and cleanup

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -8,6 +8,7 @@ $navbarWidth: 18vw;
 main {
     position: relative;
     background-color: $clr-primary-dark;
+    min-height: 100vh;
     // height: 100%;
 }
 
