feat: cleaned up app.js and added SectionBrowser and style index

--- a/src/style/colors/_colors.scss
+++ b/src/style/colors/_colors.scss
@@ -1,7 +1,9 @@
 $clr-primary: #45A29E;
 $clr-primary-light: #66FCF1;
 $clr-primary-dark: #1F2833;
+
 $clr-gray: #C5C6C7;
+$clr-white: #e4e4e4;
 $clr-black: #0B0C10;
 
 // $clr-primary: #E0A742;
