--- a/src/style/breakpoints/_breakpoints.scss
+++ b/src/style/breakpoints/_breakpoints.scss
@@ -1,1 +1,19 @@
 $bp-mobile: 'max-width: 425px';
+
+@mixin bp-mobile {
+    @media only screen and (min-width: 425px) {
+        
+    }
+}
+
+@mixin bp-tablet {
+    @media only screen and (min-width: 768px) {
+
+    }
+}
+
+@mixin bp-laptop {
+    @media only screen and (min-width: 1200px) {
+
+    }
+}
