--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -1,5 +1,10 @@
 @import 'style/colors';
 
+#section-browser-header {
+    background-color: wheat;   
+    text-align: center; 
+}
+
 .section-browser {
     background-color: rgba($color: $clr-white, $alpha: 1.0); 
     border-radius: 10px;
