--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,5 +1,9 @@
 @import 'style';
 
+html {
+    scroll-behavior: smooth;
+}
+
 main {
     position: relative;
     background-color: $clr-primary-dark;
