--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -6,7 +6,7 @@ html {
 
 main {
     position: relative;
-    background-color: $clr-primary-dark;
+    background-color: $clr-primary-shade;
     min-height: 100vh;
 
 
