--- a/src/components/ProjectsGallery/ProjectsGallery.scss
+++ b/src/components/ProjectsGallery/ProjectsGallery.scss
@@ -5,7 +5,7 @@
     border-radius: 2px;
     background-color: gray;
 
-    margin-top: 18px;
+    // margin-top: 18px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -18,7 +18,7 @@
         margin-bottom: 10px;
 
         color: white;
-        border: 1px solid black;
+        // border: 1px solid black;
         text-align: center;
     }
 
