--- a/src/pages/PageHome/PageHome.scss
+++ b/src/pages/PageHome/PageHome.scss
@@ -18,4 +18,10 @@ section {
         margin-top: 20px;
         color: $clr-gray;
     }
+    
+    // ANCHOR The about section, aka Tyler Smith & description
+    &#home-about-section {
+        @include responsive-static(padding-top, 20, 60);
+        @include responsive-static(padding-bottom, 20, 80);
+    }
 }
