--- a/src/style/fonts/_fonts.scss
+++ b/src/style/fonts/_fonts.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
 
 @mixin font-display () {
     font-family: 'Staatliches', sans-serif;
@@ -18,6 +19,10 @@
 
 @mixin font-lora () {
     font-family: 'Lora', serif;
+}
+
+@mixin font-lato () {
+    font-family: 'Lato', sans-serif;
 }
 
 @mixin font-stencil () {
