--- a/src/pages/PageHome/PageHome.scss
+++ b/src/pages/PageHome/PageHome.scss
@@ -7,7 +7,6 @@ section {
     h1 {
         @include responsive-static(font-size, 30, 50);
         padding-top: 20px;
-        // color: $clr-gray;
     }
     
     h2 {
@@ -16,7 +15,6 @@ section {
 
     p {
         margin-top: 20px;
-        // color: $clr-gray;
     }
 }
 
@@ -25,15 +23,45 @@ section {
     padding: 15% 0;
 
     h1, p {
+        @include font-lato;
         font-weight: 100;
         text-transform: uppercase;
     }
 
     h1 {
-        @include responsive-static(font-size, 50, 80);
+        @include responsive-static(font-size, 60, 125);
     }
 
     p {
-        @include responsive-static(font-size, 20, 50);
+        @include responsive-static(font-size, 20, 40);
+    }
+}
+
+#earth-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 30vh;
+
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(181deg, rgba(0,0,0,0) 0%, rgba(105,119,189,1) 100%);
+    background: -webkit-linear-gradient(181deg, rgba(0,0,0,0) 0%, rgba(105,119,189,1) 100%);
+    background: linear-gradient(181deg, rgba(0,0,0,0) 0%, rgba(105,119,189,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#6977bd",GradientType=1);
+    
+    border-radius: 10px 10px 0px 0px;
+    z-index: -1;
+
+    &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        // background-color: red;
+
     }
 }
