--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -1,5 +1,7 @@
 @import 'style/colors', 'style/breakpoints', 'style/responsive', 'style/fonts';
 
+$ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
+
 .sectionbrowser {
     background-color: white;
     // color: $clr-black;   
@@ -13,25 +15,44 @@
         justify-content: space-around;
 
         width: 100%;
-        padding: 0.5em 0.5em;
+        padding: 1em 0.5em;
         
         background-color: $clr-white;
         color: black;
         
-        a {
-            background-color: $clr-white;
-            padding: 0.5em 2em;
-            border-radius: 10px;
-        }
+        // The list elements in the header (each of the sections in the header)
+        li {
+            list-style-type: none;
 
-        a:hover {
-            background-color: $clr-gray;
+            // The actual button
+            a {
+                color: black;
+                background-color: transparent;
+                padding: 0.5em 2em;
+                border-radius: 10px;
+
+                transition: background-color 0.2s $ease-out-cubic;
+            }
+
+            // Hover over a button
+            a:hover {
+                background-color: $clr-gray;
+                text-decoration: none;
+            }
+
+            // Current Section in header
+            &.current {
+                a {
+                    background-color: white;
+                }
+            }
         }
     }
 
     // The sections themselves
     .sectionbrowser-content-section {
         padding: 20px 0 10px 0;
+        padding: 300px 0 200px 0; // TODO THIS IS PURELY FOR DEBUG GET RID OF THIS
     }
 
     // The HR between each content
