--- a/src/style/fonts/_fonts.scss
+++ b/src/style/fonts/_fonts.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 @mixin font-display () {
     font-family: 'Staatliches', sans-serif;
@@ -27,4 +28,8 @@
 
 @mixin font-stencil () {
     font-family: 'Allerta Stencil', sans-serif;
+}
+
+@mixin font-sourcesans () {
+    font-family: 'Source Sans Pro', sans-serif;
 }
