--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,32 +1,39 @@
 @import 'style/colors', 'style/breakpoints', 'style/responsive', 'style/fonts';
 
 .project {
-    display: inline-block;
+    display: grid;
     min-width: 40%;
     max-width: 250px;
     margin: 0;
+
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr 2fr;
+    grid-template-areas:
+        "image"
+        "title"
+        "description";
+    justify-items: center;
+    align-items: center;
 
     border-radius: 100px;
 
     padding: 1em;
     margin: 0.5em;
+}
 
-    .project-image-wrapper {
-        display: grid;
-        place-items: center;
-        grid-template-areas: "inner-div";
-        height: 100%;
-        width: 100%;
-        margin: 0px;
+.project-image-wrapper {
+    display: grid;
+    place-items: center;
+    grid-area: image;
+    grid-template-areas: "inner-div";
+    height: 100%;
+    width: 50%;
+    margin: 0px;
 
-        img {
-            // position: absolute;
-            grid-area: inner-div;
-            // max-width: 80%;
-            // max-height: 80%;
-        }
+    img {
+        grid-area: inner-div;
     }
-
+    
     .project-image-outline {
         max-width: 100%;
         max-height: 100%;
@@ -37,4 +44,8 @@
         max-height: 70%;
         color: red;
     }
+}
+
+.project-title {
+    @include responsive-static(font-size, 15, 25);
 }
