feat: removed node-sass dependency as it was deprecated. now using Compile Sass to CSS.
Usage: sass <input.scss> [output.css]
       sass <input.scss>:<output.css> <input/>:<output/> <dir/>

=== Input and Output ===================
    --[no-]stdin               Read the stylesheet from stdin.
    --[no-]indented            Use the indented syntax for input from stdin.
-I, --load-path=<PATH>         A path to use when resolving imports.
                               May be passed multiple times.
-s, --style=<NAME>             Output style.
                               [expanded (default), compressed]
    --[no-]charset             Emit a @charset or BOM for CSS with non-ASCII characters.
                               (defaults to on)
    --[no-]error-css           When an error occurs, emit a stylesheet describing it.
                               Defaults to true when compiling to a file.
    --update                   Only compile out-of-date stylesheets.

=== Source Maps ========================
    --[no-]source-map          Whether to generate source maps.
                               (defaults to on)
    --source-map-urls          How to link from source maps to source files.
                               [relative (default), absolute]
    --[no-]embed-sources       Embed source file contents in source maps.
    --[no-]embed-source-map    Embed source map contents in CSS.

=== Other ==============================
-w, --watch                    Watch stylesheets and recompile when they change.
    --[no-]poll                Manually check for changes rather than using a native watcher.
                               Only valid with --watch.
    --[no-]stop-on-error       Don't compile more files once an error is encountered.
-i, --interactive              Run an interactive SassScript shell.
-c, --[no-]color               Whether to use terminal colors for messages.
    --[no-]unicode             Whether to use Unicode characters for messages.
-q, --[no

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -20,17 +20,68 @@ footer {
     padding: 0 5%;
 
     color: $clr-white;
-    // align-items: center;
-    // text-align: center;
-    
-    // background-color: $clr-white;
+
+    hr {
+        border: 0;
+        background: rgb(223,152,222);
+        background: -moz-linear-gradient(90deg, rgba(223,152,222,1) 0%, rgba(255,255,255,0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(223,152,222,1) 0%, rgba(255,255,255,0) 100%);
+        background: linear-gradient(90deg, rgba(223,152,222,1) 0%, rgba(255,255,255,0) 100%);
+        height: 1px;
+        margin: 0px 50% 10px 0px;
+    }
     
 }
 
+// Font sizing for the footer and font families
+#footer-contact, #footer-more {
+    h2 {
+        @include responsive-static(font-size, 20, 25);
+        @include font-lato;
+        font-weight: 500;
+        letter-spacing: 4px;
+    }
+
+    h3 {
+        @include responsive-static(font-size, 10, 18);
+        @include font-lato;
+        margin: 8% 0;
+        font-weight: 400;
+        letter-spacing: 1px;
+        color: $clr-base-500;
+        align-self: center;
+    }
+
+    p, a {
+        @include responsive-static(font-size, 8, 14);
+        @include font-lato;
+        font-weight: 300;
+        letter-spacing: 1px;
+        color: $clr-base-500;
+        align-self: center;
+    }
+}
+
+// Contact specific
 #footer-contact {
     grid-area: contact;
+
+    #contact-body {
+        display: grid;
+        grid-template-columns: [h3] 1fr [link] 2fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+
+        h3 {
+            grid-column: h3;
+        }
+
+        a {
+            grid-column: link;
+        }
+    }
 }
 
+// More specific
 #footer-more {
     grid-area: more;
 }
