--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -2,7 +2,25 @@
 
 $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 
+@mixin browser-fx {
+    border: 2px solid green;
+}
+
 .sectionbrowser {
+    position: relative;
+    
+    // This pseudo element is used for the box shadow around the section browser
+    &::before {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        content: '';
+        
+        border-radius: 10px 10px 0 0;
+        box-shadow: 0px -1vh 50vw 2vw rgba(255, 128, 234, 0.37); 
+    }
 
     .sectionbrowser-header {
         position: sticky;
@@ -13,13 +31,14 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
         justify-content: space-around;
 
         width: 100%;
-        // height: 5em;
         padding: 1.5em 0.5em;
         margin: 0;
         
-        background-color: $clr-white;
         color: black;
+        background-color: $clr-white;
         border-radius: 10px 10px 0 0;
+        @include browser-fx;
+        border-bottom: 0px;
 
         transition: font-size 0.5s;
         transition: padding 0.5s;
@@ -96,6 +115,8 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 // Everything under the header
 .sectionbrowser-content {
     background-color: white;
+    @include browser-fx;
+    border-top: 0px;
 }
 
 //  The Section Browser while pinned to
