--- a/src/components/SectionBrowser/SectionBrowser.scss
+++ b/src/components/SectionBrowser/SectionBrowser.scss
@@ -2,8 +2,8 @@
 
 $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 
-@mixin browser-fx {
-    border: 2px solid green;
+@mixin browser-border {
+    border: 4px inset rgba(56, 57, 116, 0.37);
 }
 
 .sectionbrowser {
@@ -37,7 +37,7 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
         color: black;
         background-color: $clr-white;
         border-radius: 10px 10px 0 0;
-        @include browser-fx;
+        @include browser-border;
         border-bottom: 0px;
 
         transition: font-size 0.5s;
@@ -115,7 +115,7 @@ $ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
 // Everything under the header
 .sectionbrowser-content {
     background-color: white;
-    @include browser-fx;
+    @include browser-border;
     border-top: 0px;
 }
 
